# aws-lambda-ocaml-runtime

./: .dockerignore  .gitignore  CHANGES.md  Dockerfile  LICENSE  Makefile  README.md  build.sh  dune  dune-project  esy.json  flake.nix  lambda-runtime-dev.opam  lambda-runtime.opam  lambda_runtime.opam  now-lambda.opam  now.opam  shell.nix  vercel.opam
.circleci/: config.yml
.github/workflows/: test.yml
dev/: dune  http.ml  json.ml  lambda_runtime_dev.ml  runtime.ml
esy.lock/: index.json
esy.lock/overrides/0ec19d9a87595b6ef216443849fb4e81/: package.json
esy.lock/overrides/6b24addd1d62efb807fb584a8bbecf34/: package.json
examples/api-gateway/: Dockerfile  basic.ml  build.sh  dune
examples/asynchronous-handler/: Dockerfile  basic.ml  build.sh  dune
examples/basic/: Dockerfile  basic.ml  build.sh  dune  opam.Dockerfile
examples/basic-now/: Dockerfile  basic.ml  build.sh  dune  opam.Dockerfile
examples/dev-runtime/: basic.ml  dune
examples/error/: Dockerfile  build.sh  dune  error.ml
examples/now-custom-runtime/: Dockerfile  basic.ml  dune
examples/now-lambda/: Dockerfile  basic.ml  dune
examples/now-lambda-reason/: Dockerfile  basic.re  dune  now.json  package.json
examples/now-lambda-reason/esy.lock/: index.json
examples/vercel-lambda/: basic.ml  dune  now.json
examples/vercel-lambda-reason/: basic.re  build.sh  dune
lambda-runtime/: client.ml  config.ml  context.ml  dune  errors.ml  lambda_http.ml  lambda_json.ml  lambda_runtime.ml  lambda_runtime.mli  lambda_runtime_private.ml  runtime.ml  runtime_intf.ml  util.ml
lib/: client.ml  config.ml  context.ml  dune  errors.ml  http.ml  http2.ml  httpv2.ml  json.ml  lambda_http.ml  lambda_json.ml  lambda_runtime.ml  lambda_runtime.mli  runtime.ml  runtime_intf.ml  util.ml
nix/: default.nix  generic.nix  sources.nix
nix/ci/: test.nix
now/: dune  message.ml  now.ml  now.mli  reqd.ml  request.ml  response.ml
now-lambda/: dune  message.ml  now_lambda.ml  now_lambda.mli  reqd.ml  request.ml  response.ml  types.ml
scripts/: esy-docker.mk
src/: client.ml  config.ml  context.ml  dune  errors.ml  lambda_runtime.ml  lambda_runtime.mli  lambda_runtime_private.ml  monads.ml  runtime.ml
test/: api_gateway_test.ml  config_test.ml  dune  now_lambda_test.ml  now_test.ml  runtime_test.ml  test.ml  test_common.ml  vercel_test.ml
test/fixtures/: apigw.json  apigw_real.json  apigw_real_trimmed.json  now_no_body.json  now_with_body.json  vercel-request-2.json  vercel-request.json
vercel/: dune  message.ml  request.ml  response.ml  vercel.ml  vercel.mli
