opam-version: "2.0"
maintainer: "Antonio Nuno Monteiro <anmonteiro@gmail.com>"
authors: [ "Antonio Nuno Monteiro <anmonteiro@gmail.com>" ]
license: "BSD-3-clause"
homepage: "https://github.com/anmonteiro/aws-lambda-ocaml-runtime"
bug-reports: "https://github.com/anmonteiro/aws-lambda-ocaml-runtime/issues"
dev-repo: "git+https://github.com/anmonteiro/aws-lambda-ocaml-runtime.git"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.04"}
  "dune" {build}
  "result"
  "yojson"
  "ppx_deriving_yojson"
  "httpaf"
  "httpaf-lwt-unix"
  "uri"
  "logs"
  "lwt"
  "alcotest" {with-test}
]
synopsis:
  "An OCaml custom runtime for AWS Lambda"
