opam-version: "2.0"
maintainer: "Antonio Nuno Monteiro <anmonteiro@gmail.com>"
authors: [ "Antonio Nuno Monteiro <anmonteiro@gmail.com>" ]
license: "BSD-3-clause"
homepage: "https://github.com/anmonteiro/aws-lambda-ocaml-runtime"
bug-reports: "https://github.com/anmonteiro/aws-lambda-ocaml-runtime/issues"
dev-repo: "git+https://github.com/anmonteiro/aws-lambda-ocaml-runtime.git"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.06"}
  "dune" {build}
  "result"
  "yojson" {>= "1.6.0" & < "2.0.0"}
  "ppx_deriving_yojson"
  "piaf"
  "uri"
  "logs"
  "lwt"
  "alcotest" {with-test}
]
pin-depends: [
  [ "httpaf.dev" "git+https://github.com/anmonteiro/httpaf.git#fork" ]
  [ "httpaf-lwt.dev" "git+https://github.com/anmonteiro/httpaf.git#fork" ]
  [ "httpaf-lwt-unix.dev" "git+https://github.com/anmonteiro/httpaf.git#fork" ]
  [ "h2.dev" "git+https://github.com/anmonteiro/ocaml-h2.git" ]
  [ "h2-lwt.dev" "git+https://github.com/anmonteiro/ocaml-h2.git" ]
  [ "h2-lwt-unix.dev" "git+https://github.com/anmonteiro/ocaml-h2.git" ]
  [ "piaf.dev" "git+https://github.com/anmonteiro/piaf.git" ]
  [ "ssl.dev" "git+https://github.com/savonet/ocaml-ssl.git" ]
]
synopsis:
  "An OCaml custom runtime for AWS Lambda"
