opam-version: "2.0"
maintainer: "Antonio Nuno Monteiro <anmonteiro@gmail.com>"
authors: [ "Antonio Nuno Monteiro <anmonteiro@gmail.com>" ]
license: "BSD-3-clause"
homepage: "https://github.com/anmonteiro/aws-lambda-ocaml-runtime"
bug-reports: "https://github.com/anmonteiro/aws-lambda-ocaml-runtime/issues"
dev-repo: "git+https://github.com/anmonteiro/aws-lambda-ocaml-runtime.git"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.06"}
  "dune" {build}
  "result"
  "yojson"
  "lwt"
  "base64"
  "ppx_deriving_yojson"
  "lambda-runtime"
  "alcotest" {with-test}
]
pin-depends: [
  [ "httpaf.dev" "git+https://github.com/anmonteiro/httpaf.git#fork" ]
  [ "httpaf-lwt.dev" "git+https://github.com/anmonteiro/httpaf.git#fork" ]
  [ "httpaf-lwt-unix.dev" "git+https://github.com/anmonteiro/httpaf.git#fork" ]
]
synopsis:
  "An OCaml custom runtime for Zeit.sh Now v2."
description:
  """
  lambda-runtime is an OCaml custom runtime for AWS Lambda. The `now` package
  provides an adapter and API for lambda-runtime that works with ZEIT's now.sh
  v2 service.
  """
