opam-version: "2.0"
maintainer: "Antonio Nuno Monteiro <anmonteiro@gmail.com>"
authors: [ "Antonio Nuno Monteiro <anmonteiro@gmail.com>" ]
license: "BSD-3-clause"
homepage: "https://github.com/anmonteiro/aws-lambda-ocaml-runtime"
bug-reports: "https://github.com/anmonteiro/aws-lambda-ocaml-runtime/issues"
dev-repo: "git+https://github.com/anmonteiro/aws-lambda-ocaml-runtime.git"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.06"}
  "dune" {build}
  "result"
  "yojson"
  "lwt"
  "base64"
  "piaf"
  "ppx_deriving_yojson"
  "lambda-runtime"
  "alcotest" {with-test}
]
synopsis:
  "An OCaml custom runtime for Vercel.com (Now v2)."
description:
  """
  lambda-runtime is an OCaml custom runtime for AWS Lambda. The `vercel`
  package provides an adapter and API for lambda-runtime that works with
  Vercel's (Now v2) service.
  """
