(library
  (name lambda_runtime)
  (public_name lambda-runtime)
  (modules lambda_runtime)
  (libraries lambda-runtime.private))

(library
  (name lambda_runtime_private)
  (public_name lambda-runtime.private)
  (preprocess (pps ppx_deriving_yojson))
  (modules
   client
   config
   context
   errors
   runtime
   util
   lambda_runtime_private
   lambda_http)
  (libraries yojson ppx_deriving_yojson.runtime httpaf-lwt uri logs.lwt)
  (flags (:standard -w -9)))